Atualização do Home e da barra de navegação

--- a/HTML/nav_bar.html
+++ b/HTML/nav_bar.html
@@ -1,11 +1,10 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>EEDosAmigos</title>
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css">
+    <title>Nav Bar</title>
+    <link rel="stylesheet" href="/CSS/nav_bar_style.css">
 </head>
 <body>
     <nav>
@@ -45,25 +44,6 @@
                 </div>
             </li>
         </ul>
-    </nav>
-    <div class="video">
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/NoACUcXLgQQ?si=DcCBIorLvPfhDBKK" 
-        title="YouTube video player" 
-        frameborder="0" 
-        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
-        referrerpolicy="strict-origin-when-cross-origin" 
-        allowfullscreen>
-        </iframe>
-    </div>
-    <footer>
-        <div class="direito_uso">
-            <text>Olá este site é de uso particular e só pode ser usado por mim (Felipe Zucoli) e meus amigos, agradeço desde já :)</text>
-            <div class="footer_social">
-                <a href="#" target="_blank"><i class="fa-brands fa-instagram"></i></a>
-                <a href="https://github.com/Felipe-Zucoli" target="_blank"><i class="fa-brands fa-github"></i></a>
-                <a href="https://www.linkedin.com/in/felipe-zucoli-51b571202/" target="_blank"><i class="fa-brands fa-linkedin"></i></a>
-            </div>
-        </div>
-    </footer>
+    </nav> 
 </body>
 </html>
