Começo da produção da página do mapa Moon

--- a/HTML/moon_page.html
+++ b/HTML/moon_page.html
@@ -10,12 +10,43 @@
 <body>
     <!--Barra de navegação-->
     <div id="nav-placeholder">
-
     </div>
     <script>
         $(function(){
             $("#nav-placeholder").load("nav_bar.html");
         });
     </script>
+    <div class="Moon_img">
+        <img src="/IMG/Moon2.jpg" alt="Parte do mapa moon, imagem de referência" class="Top_image"> <!--Testei 3 tamanhos diferentes e acredito que o médio (800 x 450) foi o que encaixou melhor-->
+    </div>
+    <div class="Ee_steps">
+        <h1 class="Ee_titulo">Moon</h1>
+    </div>
+    <div class="resume">
+        <text>
+            Jogar no mapa Moon de Call of Duty: Black Ops III Zombies é uma experiência única e eletrizante, repleta de nostalgia e desafios que te prendem do início ao fim.
+            Desde o momento em que você aparece na Área 51, com hordas de zumbis te cercando e o Pack-a-Punch brilhando à distância, você já sente a adrenalina. 
+            Aquele instante em que você precisa decidir: tentar sobreviver por mais tempo ali ou se teleportar para a Lua imediatamente? A escolha parece simples, mas o risco é grande.<br><br>
+            Uma vez na Lua, a atmosfera muda completamente. O cenário lunar, com baixa gravidade, torna os movimentos mais lentos e a sensação de flutuar é estranhamente prazerosa. 
+            Mas cuidado, essa lentidão pode ser sua ruína! Os zumbis não te dão folga, e o terror só aumenta com a chegada do Astronauta Traidor, que pode te pegar desprevenido e roubar seus perks.
+            O som ambiente é algo especial: aquele silêncio mortal interrompido pelos gemidos dos zumbis no vácuo espacial e pelos alarmes das áreas de descompressão, que são uma ameaça constante. 
+            A pressão de ficar sem oxigênio faz cada segundo parecer mais urgente.<br><br>
+            Conforme você explora, o mapa revela camadas e mais camadas de complexidade. A Pirâmide do M.P.D. e a busca pelos Easter Eggs te fazem mergulhar na mitologia dos zumbis. 
+            É como se você fosse parte de uma missão secreta que vai além da simples sobrevivência. A cada passo, você sente a grandiosidade do que está por vir: a destruição da Terra.
+            E quando você ativa os mísseis no final, assistindo o planeta explodir à distância... é um momento épico, algo que só Moon pode proporcionar.<br><br>
+            O sentimento de realização, misturado com a tensão de saber que a luta ainda não acabou, faz desse mapa um dos mais amados pelos fãs de Zombies.
+            Moon não é só um mapa, é uma aventura espacial frenética, repleta de momentos memoráveis, que mistura perfeitamente ação, estratégia e narrativa.
+        </text>
+    </div>
+    <div class="Ee_steps">
+        <h1 class="Ee_titulo">Easter Egg</h1>
+        <h2 class="Requisitos_ee">Pré-requisitos</h2>
+        <text class="Padrao_textos">
+            - O GobbleGum "Raindrops" pode ajudar bastante, já que libera todas as máquinas de perk, além de um max ammo.<br><br>
+            - Certifique-se de ter armas poderosas e perks importantes como Juggernog, Speed Cola e Quick Revive.
+        </text>
+        <img src="/IMG/rainDropsBo3.jpeg" alt="GobbleGum Raindrops" class="Reference_image">
+        <text class="img_texto">GobbleGum Raindrops</text>
+    </div>
 </body>
 </html>
