--- a/HTML/index.html
+++ b/HTML/index.html
@@ -6,6 +6,7 @@
     <title>EEDosAmigos</title>
     <link rel="stylesheet" href="/CSS/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css">
+    <script type="text/javascript" src="/JS/ScriptHome.js"></script>
     <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
 </head>
 <body>
