Pequena atualização na barra de navegação e imagem de referencia na página do mapa Moon

--- a/HTML/moon_page.html
+++ b/HTML/moon_page.html
@@ -40,13 +40,21 @@
     </div>
     <div class="Ee_steps">
         <h1 class="Ee_titulo">Easter Egg</h1>
-        <h2 class="Requisitos_ee">Pré-requisitos</h2>
-        <text class="Padrao_textos">
+        <h2 class="Sub_text">Pré-requisitos</h2>
+        <p  class="Padrao_textos">
             - O GobbleGum "Raindrops" pode ajudar bastante, já que libera todas as máquinas de perk, além de um max ammo.<br><br>
+            
+        </p>
+        <p  class="Padrao_textos">
             - Certifique-se de ter armas poderosas e perks importantes como Juggernog, Speed Cola e Quick Revive.
-        </text>
-        <img src="/IMG/rainDropsBo3.jpeg" alt="GobbleGum Raindrops" class="Reference_image">
-        <text class="img_texto">GobbleGum Raindrops</text>
+        </p>
+        <div class="Img_referencia">
+            <img src="/IMG/rainDropsBo3.jpeg" alt="GobbleGum Raindrops" class="Reference_image">
+        </div>
+        <p class="img_texto">GobbleGum Raindrops</p>
+        <div>
+            <h2 class="Sub_text">Passo a Passo</h2>
+        </div>
     </div>
 </body>
 </html>
