--- a/HTML/moon_page.html
+++ b/HTML/moon_page.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -41,19 +41,21 @@
     <div class="Ee_steps">
         <h1 class="Ee_titulo">Easter Egg</h1>
         <h2 class="Sub_text">Pré-requisitos</h2>
-        <p  class="Padrao_textos">
-            - O GobbleGum "Raindrops" pode ajudar bastante, já que libera todas as máquinas de perk, além de um max ammo.<br><br>
-            
-        </p>
-        <p  class="Padrao_textos">
-            - Certifique-se de ter armas poderosas e perks importantes como Juggernog, Speed Cola e Quick Revive.
-        </p>
+        <ul  class="Padrao_textos">
+            <li class="info_text">O GobbleGum "Raindrops" pode ajudar bastante, já que libera todas as máquinas de perk, além de um max ammo.</li>
+            <li class="info_text">Certifique-se de ter armas poderosas e perks importantes como Juggernog, Speed Cola e Quick Revive.</li>
+        </ul>
         <div class="Img_referencia">
             <img src="/IMG/rainDropsBo3.jpeg" alt="GobbleGum Raindrops" class="Reference_image">
         </div>
         <p class="img_texto">GobbleGum Raindrops</p>
         <div>
             <h2 class="Sub_text">Passo a Passo</h2>
+        </div>
+        <div>
+            <text>
+
+            </text>
         </div>
     </div>
 </body>
